--- a/src/features/form/form.module.scss
+++ b/src/features/form/form.module.scss
@@ -57,7 +57,6 @@
   position: relative;
   display: flex;
   @include adaptive(margin-bottom, 44, 23);
-  @include adaptive(column-gap, 20, 10);
 }
 .pseudoItem {
   display: inline-block;
@@ -67,6 +66,7 @@
   background: rgb(133, 133, 133);
   border-radius: 5px;
   cursor: pointer;
+  @include adaptive(margin-right, 20, 10);
 
   &:focus {
     background: #ffffff;
